added link between stats dialog & btn + warning mesage in stats

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -48,7 +48,7 @@
           Load History
         </span>
       </span>
-      <span id="steam_Inv_His_Stats">
+      <span class="steam_filter_stats_win_dismiss" id="steam_Inv_His_Stats">
         <svg class="bigger_icon" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" width="4.994cm" height="5cm" viewBox="0 0 141.566 141.732">
           <defs>
             <linearGradient id="iconGradient" gradientTransform="rotate(90)">
@@ -1143,15 +1143,16 @@
     <div class="modal_top_bar"></div>
     <div class="newmodal_header_border">
       <div class="newmodal_header">
-        <div class="newmodal_close steam_filter_stats_Win_Dismiss" data-panel="{&quot;focusable&quot;:true,&quot;clickOnActivate&quot;:true}"></div>
+        <div class="newmodal_close steam_filter_stats_win_dismiss" data-panel="{&quot;focusable&quot;:true,&quot;clickOnActivate&quot;:true}"></div>
         <div id="steam_filter_stats_win_title_text" class="title_text">Stats</div>
       </div>
     </div>
     <div class="newmodal_content_border">
       <div class="newmodal_content" style="max-height: 1477px;">
+        <div id="steam_filter_stats_alert_message">*WARNING - You have not loaded all your history. The following data will be incorect*</div>
         <div id="steam_filter_stats_message">DESC</div>
         <div class="newmodal_buttons" data-panel="{&quot;flow-children&quot;:&quot;row&quot;}">
-          <div id="steam_filter_stats_win_btn" class="btn_grey_steamui btn_medium steam_filter_stats_win_dismiss" data-panel="{&quot;autoFocus&quot;:true,&quot;focusable&quot;:true,&quot;clickOnActivate&quot;:true}"><span id="steam_filter_stats_win_btn_txt">BUTTON</span></div>
+          <div id="steam_filter_stats_win_btn" class="btn_grey_steamui btn_medium steam_filter_stats_win_dismiss" data-panel="{&quot;autoFocus&quot;:true,&quot;focusable&quot;:true,&quot;clickOnActivate&quot;:true}"><span id="steam_filter_stats_win_btn_txt">CLOSE</span></div>
         </div>
       </div>
     </div>
