started on filter version V3 with diffrent tags

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -213,6 +213,7 @@
               <div class="list-2">
                 <h3 class="list-Title">Filters</h3>
                 <ul class="list2 filter-List">
+                  <li data-main-tag="Unlocked a container" data-item-name-tag="Case Key"> Case Opened </li>
                 </ul>
               </div>
             </div>
