--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -213,7 +213,9 @@
               <div class="list-2">
                 <h3 class="list-Title">Filters</h3>
                 <ul class="list2 filter-List">
-                  <li data-item-name-tag="Case Key"> Case Opened </li>
+                  <li data-main-tag="Unlocked a container" data-item-name-tag="Case Key"> Case Opened </li>
+                  <li data-main-tag="Unlocked a container" data-item-name-tag="Souvenir Package"> Souvenir Package Opened </li>
+                  <li data-main-tag="Unlocked a container" data-item-name-tag="Capsule"> Capsule Opened </li>
                 </ul>
               </div>
             </div>
