simple search added
problem needs to be fixed (more info on line 73 & 75 in content.js)

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -123,11 +123,11 @@
       <div id="steam_filter_simple_searchbar_win_form"> <!--form-->
         <div class="searchbar_container">
           <label class="searchbar_form_object steam_filter_gui_label" for="searchbar">Search</label>
-          <input class="searchbar_form_object steam_filter_gui_input" type="text" id="searchbar_data" name="searchbar_data">
+          <input class="searchbar_form_object steam_filter_gui_input" type="text" id="steam_filter_simple_searchbar_data" name="searchbar_data">
           <!--<label class="searchbar_form_object steam_filter_gui_label" for="label">Alt. Label</label>
           <input class="searchbar_form_object steam_filter_gui_input" type="text" id="label_data" name="label_data">-->
           <div>
-            <button class="searchbar_form_object steam_filter_gui_button">Search</button>
+            <button id="steam_filter_simple_searchbar_search_submit_btn" class="searchbar_form_object steam_filter_gui_button">Search</button>
             <button id="steam_filter_simple_searchbar_win_dismiss_btn" class="searchbar_form_object steam_filter_gui_button steam_filter_simple_searchbar_win_dismiss">Close</button>
           </div>
           <button id="steam_filter_simple_searchbar_advanced" class="steam_filter_gui_button">Advanced</button>
