--- a/css/simpleSearchBar.css
+++ b/css/simpleSearchBar.css
@@ -57,3 +57,49 @@
   margin-top: 15px;
 }
 
+
+/* checkbox */
+#include_search_outside_filters_box {
+  appearance: none;
+  background-color: #464d58;
+  margin: 0;
+  font: inherit;
+  color: currentColor;
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.0em solid currentColor;
+  border-radius: 0.15em;
+  transform: translateY(-0.075em);
+  
+  display: grid;
+  place-content: center;
+  cursor: pointer;
+}
+
+#include_search_outside_filters_box::before {
+  content: "";
+  width: 1.15em;
+  height: 1.15em;
+  border-radius: 0.15em;
+  transform: scale(0);
+  transition: 80ms transform ease-in-out;
+  box-shadow: inset 1.2em 1.2em #00c0f0;
+}
+#include_search_outside_filters_box:checked::before {
+  transform: scale(1);
+}
+
+#include_search_outside_filters_box_container {
+  font-size: 0.8rem;
+  line-height: 1.1;
+  display: grid;
+  grid-template-columns: 1em auto;
+  gap: 0.5em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+#include_search_outside_filters_box_container label {
+  font-size: 1.1rem;
+  line-height: 1.1;
+}
