--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -1156,8 +1156,79 @@
     </div>
     <div class="newmodal_content_border">
       <div class="newmodal_content" style="max-height: 1477px;">
-        <div id="steam_filter_stats_alert_message">*WARNING - You have not loaded all your history. The following data will be incorect*</div>
+        <div id="steam_filter_stats_alert_message">*WARNING - You have not loaded all your history. The following data will be incomplete*</div>
         <div id="steam_filter_stats_message">DESC</div>
+        <div class="stats_content_container">
+          <div class="stats_list">
+            <div>
+              <!-- Chart => Display of multiple types over time -->
+              <!-- Graph => Display of one type over time -->
+
+              <span><input type="radio" name="statWinRad" id="">Cases Opened</span>
+              <!--
+                Will include:
+                * amount of each type of cases opened
+                * Amount of cases per month or year. Chart or graph?
+                * How many knifes, covert, classifed, etc. opened in total
+                * statrack openings amount
+
+                * Your luck? (if your under or over the normal opening rarity rate)
+                ** Luck on each case
+              -->
+
+              <span><input type="radio" name="statWinRad" id="">Packages Opened</span>
+              <!--
+                Will include:
+                * amount opened of each type
+                * per month/year opened
+                * How many covert, classified, etc
+              -->
+
+              <span><input type="radio" name="statWinRad" id="">Capsules Opened</span>
+              <!--
+                Will include:
+                * amount of each type opened
+                * per month/year opened
+                * How many of each rarity opened
+              -->
+
+              <span><input type="radio" name="statWinRad" id="">Case Drops</span>
+              <!--
+                Will include:
+                * How many of each type of case
+                * per month/year
+              -->
+
+              <span><input type="radio" name="statWinRad" id="">Skin Drops</span>
+              <!--
+                Will include:
+                * How many skin drops of each rarity
+                * per month/year (chart with each type)
+
+                * Graph over total amount over time?
+              -->
+
+              <span><input type="radio" name="statWinRad" id="">Graffiti Drops</span>
+              <!--
+                Will include:
+                * How many in total
+                * Graph over total amount over time
+              -->
+
+              <span><input type="radio" name="statWinRad" id="">Specific Item Stats</span>
+              <!--
+                Will include:
+                * Search for an item and following stats will come:
+                ** amount gotten in trades, market, case openings
+                ** amount lost in trades, market
+              -->
+
+            </div>
+          </div>
+          <div class="stats_windows">
+
+          </div>
+        </div>
         <div class="newmodal_buttons" data-panel="{&quot;flow-children&quot;:&quot;row&quot;}">
           <div id="steam_filter_stats_win_btn" class="btn_grey_steamui btn_medium steam_filter_stats_win_dismiss" data-panel="{&quot;autoFocus&quot;:true,&quot;focusable&quot;:true,&quot;clickOnActivate&quot;:true}"><span id="steam_filter_stats_win_btn_txt">CLOSE</span></div>
         </div>
