--- a/css/statsDialog.css
+++ b/css/statsDialog.css
@@ -1,3 +1,58 @@
 #steam_filter_stats_alert_message {
   color: rgb(243, 61, 61);
 }
+
+#steam_filter_stats .stats_content_container {
+  display: flex;
+  flex-direction: row;
+}
+
+
+#steam_filter_stats .stats_content_container .stats_list {
+  
+}
+#steam_filter_stats .stats_content_container .stats_list div {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  max-width: 12em;
+}
+
+#steam_filter_stats .stats_content_container .stats_list div > * {
+  padding: 1.0em;
+  padding-top: 0.3em;
+  padding-bottom: 0.3em;
+  margin: 0.5em;
+
+  
+  font-family: "Motiva Sans", Sans-serif;
+  font-weight: 400;
+
+  padding: 10px;
+  color: #b1b1b1;
+  margin-left: 15px;
+  margin-right: 15px;
+  
+  border-radius: 4px;
+  display: block;
+  background-color: #32363f;
+
+  transition:0.2s all ease-out;
+  cursor: pointer;
+}
+#steam_filter_stats .stats_content_container .stats_list div > *:hover {
+  background: linear-gradient( to right, #464d58 5%, #464d58 95%);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+  /*order: -1;*/
+}
+#steam_filter_stats .stats_content_container .stats_list div > * input {
+}
+#steam_filter_stats .stats_content_container .stats_list div span input:checked + span {
+  background: linear-gradient(to right, #00c0f0, #3161f3);
+  color: red !important;
+}
+
+
+#steam_filter_stats .stats_content_container .stats_windows {
+  width: max-content;
+}
