--- a/css/statsDialog.css
+++ b/css/statsDialog.css
@@ -7,6 +7,12 @@
   flex-direction: row;
 }
 
+#steam_filter_stats_modal {
+  max-width: 1000px !important;
+  width: 85vw;
+  height: 85vh;
+}
+
 
 #steam_filter_stats .stats_content_container .stats_list {
   
@@ -18,7 +24,7 @@
   max-width: 12em;
 }
 
-#steam_filter_stats .stats_content_container .stats_list div > * {
+#steam_filter_stats .stats_content_container .stats_list div span {
   padding: 1.0em;
   padding-top: 0.3em;
   padding-bottom: 0.3em;
@@ -40,19 +46,32 @@
   transition:0.2s all ease-out;
   cursor: pointer;
 }
-#steam_filter_stats .stats_content_container .stats_list div > *:hover {
+#steam_filter_stats .stats_content_container .stats_list div span:hover {
   background: linear-gradient( to right, #464d58 5%, #464d58 95%);
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
   /*order: -1;*/
 }
-#steam_filter_stats .stats_content_container .stats_list div > * input {
+#steam_filter_stats .stats_content_container .stats_list div input {
+  display: none;
 }
-#steam_filter_stats .stats_content_container .stats_list div span input:checked + span {
+input:checked + span {
   background: linear-gradient(to right, #00c0f0, #3161f3);
-  color: red !important;
+  color: white;
+  order: -1;
+
 }
 
+#cases_opened_window {
+  width: 100%;
+}
 
 #steam_filter_stats .stats_content_container .stats_windows {
-  width: max-content;
+  width: 100%;
+  
+}
+
+/* Chart */
+.number_chart {
+  width:100%;
+  max-width:700px;
 }
