added charts to html

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -1226,8 +1226,35 @@
             </div>
           </div>
           <div class="stats_windows">
+            <div class="number_chart" id="general_window">
+              <h1>General Stats</h1>
+            </div>
+            <div id="container_opened_window">
+              <canvas class="number_chart" id="container_time_graph"></canvas>
+            </div>
             <div id="cases_opened_window">
               <canvas class="number_chart" id="case_types_chart"></canvas>
+              <canvas class="number_chart" id="case_unlucks_chart"></canvas>
+            </div>
+            <div id="capsules_opened_window">
+              <canvas class="number_chart" id="capsules_types_chart"></canvas>
+              <canvas class="number_chart" id="capsules_unlucks_chart"></canvas>
+            </div>
+            <div id="packages_opened_window">
+              <canvas class="number_chart" id="packages_types_chart"></canvas>
+              <canvas class="number_chart" id="packages_unlucks_chart"></canvas>
+            </div>
+            <div id="all_drops_window">
+              <canvas class="number_chart" id="drops_time_graph"></canvas>
+            </div>
+            <div id="case_drops_window">
+              <canvas class="number_chart" id="case_drops_chart"></canvas>
+            </div>
+            <div id="skins_drops_window">
+              <canvas class="number_chart" id="skins_drops_chart"></canvas>
+            </div>
+            <div id="search_item_window">
+              <canvas class="number_chart" id="item_graph"></canvas>
             </div>
           </div>
         </div>
