--- a/components/popup.html
+++ b/components/popup.html
@@ -1,5 +1,27 @@
+<link rel="stylesheet" href="../css/popup.css">
 <html>
-  <div>
-    test
+  <div id="topBar">
+
+  </div>
+  <h1>CS:GO History Utility Filter</h1>
+  <div id="content">
+    <p>Thank you for using my extension! =)</p>
+    <p>If you appreciate the effort and time put into creating this extension and would like to show your support, you are welcome to donate. Your generosity is greatly appreciated and will contribute towards the ongoing development of this tool. Thank you for considering a donation.</p>
+  </div>
+  <div id="links">
+    <span>
+      <a id="sp" href="https://steamcommunity.com/id/K3B04">Steam Profile</a>
+    </span>
+    <span>
+      <a id="to" href="https://steamcommunity.com/tradeoffer/new/?partner=328057212&token=1iZrkZSt">Trade Offer</a>
+    </span>
+    <span>
+      <a id="pp" href="https://paypal.me/KelvinBrahe">Paypal</a>
+    </span>
+  </div>
+  <div id="invHisPageCon">
+    <a id="invHisPage" href="">Go to Inventory History page</a>
   </div>
 </html>
+
+<script src="./popup.js"></script>
