removed options icon in toolbar

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -88,25 +88,6 @@
           Open Filter
         </span>
       </span>
-      <span id="steam_Inv_His_Options">
-        <svg class="bigger_icon" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" width="5cm" height="4.685cm" viewBox="0 0 141.732 132.794">
-          <defs>
-            <linearGradient id="iconGradient" gradientTransform="rotate(90)">
-              <stop offset="0%" stop-color="#00c0f0" />
-              <stop offset="100%" stop-color="#3161f3" />
-            </linearGradient>
-          </defs>
-          <path fill="url(#iconGradient)" class="nov" d="M135.705,16.176h-61.239C71.85,6.859,63.299,0,53.157,0s-18.692,6.859-21.309,16.176H5.979c-3.301,0-5.979,2.667-5.979,5.979s2.679,5.979,5.979,5.979H31.851c2.62,9.312,11.168,16.166,21.307,16.166s18.687-6.854,21.306-16.166h61.241c3.301,0,5.979-2.679,5.979-5.979s-2.679-5.979-5.979-5.979ZM53.157,31.003c-4.889,0-8.853-3.963-8.853-8.853s3.963-8.853,8.853-8.853,8.853,3.964,8.853,8.853-3.963,8.853-8.853,8.853Z"/>
-          <path fill="url(#iconGradient)" class="nov" d="M135.705,60.423h-16.992c-2.617-9.317-11.167-16.176-21.309-16.176s-18.692,6.859-21.309,16.176H5.979c-3.301,0-5.979,2.667-5.979,5.979s2.679,5.979,5.979,5.979H76.097c2.62,9.312,11.168,16.166,21.307,16.166s18.687-6.854,21.306-16.166h16.995c3.301,0,5.979-2.679,5.979-5.979s-2.679-5.979-5.979-5.979Zm-38.301,14.827c-4.889,0-8.853-3.963-8.853-8.853s3.963-8.853,8.853-8.853,8.853,3.964,8.853,8.853-3.963,8.853-8.853,8.853Z"/>
-          <path fill="url(#iconGradient)" class="nov" d="M135.705,104.669H66.096c-2.617-9.317-11.167-16.176-21.309-16.176s-18.692,6.859-21.309,16.176H5.979c-3.301,0-5.979,2.667-5.979,5.979s2.679,5.979,5.979,5.979H23.48c2.62,9.312,11.168,16.166,21.307,16.166s18.687-6.854,21.306-16.166h69.612c3.301,0,5.979-2.679,5.979-5.979s-2.679-5.979-5.979-5.979Zm-90.919,14.827c-4.889,0-8.853-3.963-8.853-8.853s3.963-8.853,8.853-8.853,8.853,3.964,8.853,8.853-3.963,8.853-8.853,8.853Z"/>
-          <path fill="url(#iconGradient)" class="hov" d="M132.883,13.306h-59.43C70.031,5.484,62.227,0,53.157,0s-16.874,5.484-20.296,13.306H8.861C3.97,13.306,.012,17.265,.012,22.156s3.958,8.849,8.849,8.849h24.005c3.424,7.816,11.225,13.296,20.291,13.296s16.867-5.48,20.291-13.296h59.434c4.879,0,8.849-3.97,8.849-8.849s-3.97-8.849-8.849-8.849ZM53.157,31.003c-4.889,0-8.853-3.963-8.853-8.853s3.963-8.853,8.853-8.853,8.853,3.964,8.853,8.853-3.963,8.853-8.853,8.853Z"/>
-          <path fill="url(#iconGradient)" class="hov" d="M132.883,57.553h-15.183c-3.422-7.822-11.226-13.306-20.296-13.306s-16.874,5.484-20.296,13.306H8.861C3.97,57.553,.012,61.511,.012,66.402s3.958,8.849,8.849,8.849H77.113c3.424,7.816,11.225,13.296,20.291,13.296s16.867-5.48,20.291-13.296h15.188c4.879,0,8.849-3.97,8.849-8.849s-3.97-8.849-8.849-8.849Zm-35.479,17.697c-4.889,0-8.853-3.963-8.853-8.853s3.963-8.853,8.853-8.853,8.853,3.964,8.853,8.853-3.963,8.853-8.853,8.853Z"/>
-          <path fill="url(#iconGradient)" class="hov" d="M132.883,101.787H65.077c-3.425-7.815-11.225-13.294-20.29-13.294s-16.865,5.479-20.29,13.294H8.861C3.97,101.787,.012,105.757,.012,110.648s3.958,8.849,8.849,8.849h15.634c3.424,7.816,11.225,13.296,20.291,13.296s16.867-5.48,20.291-13.296h67.805c4.879,0,8.849-3.97,8.849-8.849s-3.97-8.861-8.849-8.861Zm-88.096,17.709c-4.889,0-8.853-3.963-8.853-8.853s3.963-8.853,8.853-8.853,8.853,3.964,8.853,8.853-3.963,8.853-8.853,8.853Z"/>
-        </svg>
-        <span>
-          Options
-        </span>
-      </span>
 
       
     </div>
@@ -1145,7 +1126,7 @@
 </div>
 
 <!-- Stats -->
-<div class="steam_filter_hide_class2 steam_filter_dialog_group" id="steam_filter_stats">
+<div class="steam_filter_hide_class steam_filter_dialog_group" id="steam_filter_stats">
   <div id="steam_filter_stats_modal" class="newmodal steam_inv_filter_modal" data-panel="{&quot;onCancelButton&quot;:&quot;CModal.DismissActiveModal()&quot;}">
     <div class="modal_top_bar"></div>
     <div class="newmodal_header_border">
