removed advanced option in simple search

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -115,7 +115,7 @@
             <button id="steam_filter_simple_searchbar_search_submit_btn" class="searchbar_form_object steam_filter_gui_button">Search</button>
             <button id="steam_filter_simple_searchbar_win_dismiss_btn" class="searchbar_form_object steam_filter_gui_button steam_filter_simple_searchbar_win_dismiss">Close</button>
           </div>
-          <button id="steam_filter_simple_searchbar_advanced" class="steam_filter_gui_button">Advanced</button>
+          <!--<button id="steam_filter_simple_searchbar_advanced" class="steam_filter_gui_button">Advanced</button>-->
         </div>
       </div> <!--form-->
     </div>
