added show all feature - ADD TO tooltip-work-line branch

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -142,24 +142,7 @@
               <div class="list-1">
                 <h3 class="list-Title">Show</h3>
                 <ul id="filter_list_show" class="list1 filter-List">
-                  <li data-main-tag="Earned"> Medals </li>
-                  <li data-main-tag="Moved to Storage Unit"> Storage Unit </li>
-                  <li data-main-tag="Got an item drop"> Case Drops </li>
-                  <li data-main-tag="Earned a new rank and got a drop"> Item Drops </li>
-                  <li data-main-tag="You traded with "> Trades </li>
-                  <li data-main-tag="Unlocked a container"> Container Opened </li>
-                  <li data-main-tag="Purchased from the store"> Store Purchases </li>
-                  <li data-main-tag="You purchased an item on the Community Market."> Market Purchases </li>
-                  <li data-main-tag="You listed an item on the Community Market."> Market Created Listings </li>
-                  <li data-main-tag="You canceled a listing on the Community Market. The item was returned to you."> Market Removed Listings </li>
-                  <li data-main-tag="Used"> Used </li>
-                  <li data-main-tag="Earned a souvenir drop"> Souvenir drop </li>
-                  <li data-main-tag="Crafted"> Trade ups </li>
-                  <li data-main-tag="Sticker applied"> Sticker applied </li>
-                  <li data-main-tag="Sticker removed"> Sticker removed </li>
-                  <li data-main-tag="You deleted"> Deleted Item </li>
-                  <li data-main-tag="Unsealed"> Unsealed Graffiti </li>
-                  <li data-main-tag="Mission reward"> Mission Reward (Operations) </li>
+                  <li data-overrule-tag="everything">Show All</li>
                 </ul>
               </div>
             </div>
@@ -183,6 +166,24 @@
                   <li data-main-tag="Unlocked a container" data-item-name-tag="Case Key"> Case Opened </li>
                   <li data-main-tag="Unlocked a container" data-item-name-tag="Souvenir Package"> Souvenir Package Opened </li>
                   <li data-main-tag="Unlocked a container" data-item-name-tag="Capsule"> Capsule Opened </li>
+                  <li data-main-tag="Earned"> Medals </li>
+                  <li data-main-tag="Moved to Storage Unit"> Storage Unit </li>
+                  <li data-main-tag="Got an item drop"> Case Drops </li>
+                  <li data-main-tag="Earned a new rank and got a drop"> Item Drops </li>
+                  <li data-main-tag="You traded with "> Trades </li>
+                  <li data-main-tag="Unlocked a container"> Container Opened </li>
+                  <li data-main-tag="Purchased from the store"> Store Purchases </li>
+                  <li data-main-tag="You purchased an item on the Community Market."> Market Purchases </li>
+                  <li data-main-tag="You listed an item on the Community Market."> Market Created Listings </li>
+                  <li data-main-tag="You canceled a listing on the Community Market. The item was returned to you."> Market Removed Listings </li>
+                  <li data-main-tag="Used"> Used </li>
+                  <li data-main-tag="Earned a souvenir drop"> Souvenir drop </li>
+                  <li data-main-tag="Crafted"> Trade ups </li>
+                  <li data-main-tag="Sticker applied"> Sticker applied </li>
+                  <li data-main-tag="Sticker removed"> Sticker removed </li>
+                  <li data-main-tag="You deleted"> Deleted Item </li>
+                  <li data-main-tag="Unsealed"> Unsealed Graffiti </li>
+                  <li data-main-tag="Mission reward"> Mission Reward (Operations) </li>
                 </ul>
               </div>
             </div>
