added general stats. push into tooltip-work-line branch

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -216,6 +216,18 @@
           <div class="stats_windows">
             <div class="number_chart" id="general_window">
               <h1>General Stats</h1>
+              <div class="totStatBox_con_con">
+                <div class="totStatBox_con">
+                  <span class="totStatBox" id="caseTot">Total cases opened: <span id="caseTotNum" class="numBox">0</span></span>
+                  <span class="totStatBox" id="capTot">Total capsules opened: <span id="capTotNum" class="numBox">0</span></span>
+                  <span class="totStatBox" id="packTot">Total packages opened: <span id="packTotNum" class="numBox">0</span></span>
+                </div>
+                <div class="totStatBox_con">
+                  <span class="totStatBox" id="case2Tot">Total cases dropped: <span id="case2TotNum" class="numBox">0</span></span>
+                  <span class="totStatBox" id="skinTot">Total skins dropped: <span id="skinTotNum" class="numBox">0</span></span>
+                  <span class="totStatBox" id="grafTot">Total graffiti dropped: <span id="grafTotNum" class="numBox">0</span></span>
+                </div>
+              </div>
             </div>
             <div id="container_opened_window">
               <canvas class="number_chart" id="container_time_graph"></canvas>
