--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -1146,7 +1146,7 @@
 </div>
 
 <!-- Stats -->
-<div class="steam_filter_hide_class2 steam_filter_dialog_group" id="steam_filter_stats">
+<div class="steam_filter_hide_class steam_filter_dialog_group" id="steam_filter_stats">
   <div id="steam_filter_stats_modal" class="newmodal steam_inv_filter_modal" data-panel="{&quot;onCancelButton&quot;:&quot;CModal.DismissActiveModal()&quot;}">
     <div class="modal_top_bar"></div>
     <div class="newmodal_header_border">
